Fix search thread not running and refactor