@@ -168,7 +168,7 @@ public class ParticleRenderer {
                 particleConfig, colorConfig, camera.getAutoCenterPoint()));
         }
         for (int i = particles.size(); i > particleCount; i--) {
-            particles.remove(0);
+            particles.removeFirst();
         }
         respawnAccumulator += deltaTime;
         if (respawnAccumulator >= particleConfig.getRespawnTime()) {
@@ -193,6 +193,10 @@ public class ParticleRenderer {
     public void render(float deltaTime) {
         handleInput();
         updateAttractor();
+
+        Gdx.gl.glClear(GL20.GL_COLOR_BUFFER_BIT | GL20.GL_DEPTH_BUFFER_BIT |
+        (Gdx.graphics.getBufferFormat().coverageSampling ? GL20.GL_COVERAGE_BUFFER_BIT_NV : 0));
+
         if (config.getSelectedAttractor() == null)
             return;
 
@@ -203,8 +207,6 @@ public class ParticleRenderer {
         Vector3 sumPosition = new Vector3();
 
         postProcessing.capture();
-        Gdx.gl.glClear(GL20.GL_COLOR_BUFFER_BIT | GL20.GL_DEPTH_BUFFER_BIT |
-        (Gdx.graphics.getBufferFormat().coverageSampling ? GL20.GL_COVERAGE_BUFFER_BIT_NV : 0));
         Gdx.gl.glEnable(GL20.GL_BLEND);
         Gdx.gl.glBlendFunc(GL20.GL_SRC_ALPHA, GL20.GL_ONE);
         shapeRenderer.setProjectionMatrix(camera.getCamera().combined);
